feat(html): adiciona estrutura inicial em HTML

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 
 <body>
-
+  <section>
+    <img src="./images/image-qr-code.png" alt="Qr Code">
+    <h1>Improve your front-end skills by building projects</h1>
+    <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+  </section>
   <div>
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Jhonny Araújo</a>.
